--- a/css/style.css
+++ b/css/style.css
@@ -1063,6 +1063,15 @@ footer .copy {
   .review .review-container .review-slider .review-card {
     width: 14rem !important;
   }
+  .session .sessionInfo .speakers .content {
+    text-align: left;
+  }
+  header .bottomHead .loginSection .input-group.mobile .search-container #searchIcon:hover, header .bottomHead .loginSection .input-group.mobile .search-container #searchIcon:focus {
+    width: 13rem !important;
+  }
+  header .bottomHead .loginSection .input-group.mobile .search-container .fa-search:hover ~ #searchIcon {
+    width: 13rem !important;
+  }
 }
 
 @media only screen and (max-width: 400px) {
@@ -1106,10 +1115,10 @@ footer .copy {
     gap: 0.938rem;
   }
   header .bottomHead .loginSection .input-group.mobile .search-container #searchIcon:hover, header .bottomHead .loginSection .input-group.mobile .search-container #searchIcon:focus {
-    width: 10rem;
+    width: 14rem;
   }
   header .bottomHead .loginSection .input-group.mobile .search-container .fa-search:hover ~ #searchIcon {
-    width: 10rem;
+    width: 14rem;
   }
   .upcomingWebinars .timings #accordion .card .card-header {
     padding-top: 0.625rem;
